CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT (autolock)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/auto-lock/inc)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/common/auto-lock/src SRCC_AUTO_LOCK)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRC_LIST)

SET(SRC_LIST ${SRC_LIST} ${SRCC_AUTO_LOCK})

ADD_EXECUTABLE(autolock ${SRC_LIST})
TARGET_LINK_LIBRARIES(autolock pthread)